[gd_scene load_steps=11 format=2]

[ext_resource path="res://Mini Scenes/Enemies/Tank.gd" type="Script" id=1]
[ext_resource path="res://Art/Enemies/Guardian3.png" type="Texture" id=2]
[ext_resource path="res://Art/paralyzed.png" type="Texture" id=3]
[ext_resource path="res://Mini Scenes/Enemies/Light.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/WhiteBlock.png" type="Texture" id=5]
[ext_resource path="res://Mini Scenes/Enemies/Shield.gd" type="Script" id=6]
[ext_resource path="res://Art/Enemies/Guardian3_LowOP.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.0906, 40.1176 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.1415, 15.8326 )

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[node name="Guardian" type="Area2D"]
script = ExtResource( 1 )
_max_health = 3
_speed = 1
damaged_sprite = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
flip_v = true
__meta__ = {
"_edit_lock_": true
}

[node name="Paralysis" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.387428, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light" parent="." instance=ExtResource( 4 )]

[node name="Shield" type="Area2D" parent="."]
scale = Vector2( 6.75, 6.75 )
script = ExtResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="Shield"]
position = Vector2( -0.123907, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Shield"]
modulate = Color( 0.831373, 0.0941176, 0.0941176, 0.490196 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Shield"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shield"]
anims/blink = SubResource( 3 )
[connection signal="changed_stunned" from="." to="Shield" method="_on_Guardian_changed_stunned"]
[connection signal="area_entered" from="Shield" to="Shield" method="_on_Shield_area_entered"]
[connection signal="area_exited" from="Shield" to="Shield" method="_on_Shield_area_exited"]
[connection signal="timeout" from="Shield/Timer" to="Shield" method="_on_Timer_timeout"]
